<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context="ir.beigirad.zeroapplication.authentication.GetCodeFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/code_sent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:id="@+id/get_code_tv_phone"
        style="@style/PrimaryDarkText.LargeText"
        android:textStyle="bold"
        android:text="@string/code_sent" />


    <android.support.design.widget.TextInputLayout
        android:layout_width="wrap_content"
        android:id="@+id/get_code_til"
        android:layout_height="wrap_content"
        android:hint="@string/code_number">

        <EditText

            android:id="@+id/get_code_et_code"
            style="@style/PrimaryDarkText.XLargeText"
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:drawableStart="@drawable/ic_sms"
            android:drawableTint="@color/colorAccent"
            android:gravity="center"

            android:minWidth="240dp"
            android:inputType="number"
            android:lines="1"
            android:maxLength="6"
            android:maxLines="1" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/require_code" />

    <Button
        android:id="@+id/get_code_btn_submit"
        style="@style/LightText.MediumText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"

        android:background="@color/okButtonColor"
        android:text="@string/submit_code" />

</LinearLayout>
