<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context="ir.beigirad.zeroapplication.authentication.GetPhoneFragment">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/require_phone" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="wrap_content"
        android:id="@+id/get_phone_til"
        android:layout_height="wrap_content"
        android:hint="@string/phone_number">

        <EditText
            android:id="@+id/get_phone_et_phone"
            style="@style/PrimaryDarkText.XLargeText"
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:drawableStart="@drawable/ic_smartphone"
            android:drawableTint="@color/colorAccent"
            android:gravity="center"

            android:minWidth="240dp"
            android:inputType="phone"
            android:lines="1"
            android:maxLength="11"
            android:maxLines="1" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/get_phone_btn_submit"
        style="@style/LightText.MediumText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"

        android:background="@color/okButtonColor"
        android:text="@string/submit_phone" />

</LinearLayout>
