<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="4dp"
    tools:context="ir.beigirad.zeroapplication.authentication.GetInfoFragment">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_margin="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="4dp"
                android:layout_height="match_parent"
                android:background="@color/greenColor"></LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="4dp">


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/get_info_til_name"
                    android:hint="@string/family">

                    <EditText
                        android:id="@+id/get_info_et_name"
                        style="@style/PrimaryDarkText.MediumText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:lines="1" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:id="@+id/get_info_til_family"
                    android:layout_height="wrap_content"
                    android:hint="@string/name">

                    <EditText
                        android:id="@+id/get_info_et_family"
                        style="@style/PrimaryDarkText.MediumText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:lines="1" />
                </android.support.design.widget.TextInputLayout>


            </LinearLayout>
        </LinearLayout>

    </android.support.v7.widget.CardView>


    <Button

        android:id="@+id/get_info_btn_submit"
        style="@style/LightText.LargeText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="36dp"
        android:background="@color/okButtonColor"
        android:text="@string/coninute_" />
</LinearLayout>
